# ai-playground

./: .env.example  .gitignore  Architecture.md  Makefile  README.md  pyproject.toml
.agents/: AGENTS.md
.eval-runs/04-evals/: ex-001.json  ex-002.json  ex-003.json  ex-004.json  ex-005.json  ex-006.json  ex-007.json  ex-008.json  ex-009.json  ex-010.json  ex-011.json  ex-012.json  ex-013.json  ex-014.json  ex-015.json  ex-016.json  ex-017.json  ex-018.json  ex-019.json  ex-020.json
.github/workflows/: test-chat.yml
ai-chat/: 01-chat-app-with-history.py  02-chat-app-with-stream.py  03-rag-chat.py  README.md
ai-chat/03-rag-chat/: main.py  retrieval.py
ai-chat/core/: config.py
ai-chat/utils/: load-settings.py
src/: 01-chat-app-with-history.py  02-chat-app-with-stream.py  config.py
src/03-rag-chat/: chatbot.py  data.py  domain.py  main.py  retrieval.py  terminal_app.py
src/04-evals/: README.md  TODOS.md  __init__.py  answerer.py  dataset.py  domain.py  examples.jsonl  main.py  reporting.py  retriever.py  scorers.py  settings.py
src/05-agentic-rag/: README.md  agent.py  main.py  models.py  retrieval.py  terminal_app.py  tools.py
src/06-agentic-planning/: ORCHESTRATOR.md  README.md  data.py  domain.py  main.py  models.py  orchestrator.py  retrieval.py  stages.py  terminal_app.py  tools.py
src/06-big-patent-app/: ARCHITECTURE.md  README.md  TASKS.md  domain.py  loader.py  main.py
tests/: test_agentic_planning.py  test_agentic_rag.py  test_ai_chat_entrypoints.py  test_eval_harness.py  test_rag_embedding_retrieval.py  test_rag_retrieval.py
(+6 files in other folders)
